# zania-qa

./: .gitignore  README.md  clean_cache.py  main.py  pyproject.toml  questions.json
app/core/: config.py
app/models/: question.py
app/routers/: qa.py
app/services/: qa_service.py
